// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageHeaderContent is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageHeaderContent testClass1 testClass2 emotion-euiPageHeaderContent-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems bottom is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-flexEnd-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems center is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-center-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems stretch is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props alignItems top is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-flexStart-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props breadcrumbs is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <nav
    aria-label="aria-label"
    class="euiBreadcrumbs testClass1 testClass2 emotion-euiTestCss"
    data-test-subj="test subject string"
  >
    <ol
      class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
    >
      <li
        class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
        data-test-subj="euiBreadcrumb"
      >
        <a
          class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated-isInteractive"
          data-test-subj="breadcrumbsAnimals"
          href="#"
          rel="noreferrer"
          title="Animals"
        >
          Animals
        </a>
      </li>
      <li
        class="euiBreadcrumb emotion-euiBreadcrumb-page-isTruncated"
        data-test-subj="euiBreadcrumb"
      >
        <span
          aria-current="page"
          class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncatedLast"
          title="Edit"
        >
          Edit
        </span>
      </li>
    </ol>
  </nav>
  <div
    class="euiSpacer euiSpacer--s emotion-euiSpacer-s"
  />
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered 1`] = `
<div
  class="emotion-euiPageHeaderContent"
>
  <div
    class="css-acb1mh-flex-center"
  >
    <p>
      Anything
    </p>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered 2`] = `
<div
  class="emotion-euiPageHeaderContent"
>
  <div
    class="css-acb1mh-flex-center"
  >
    Child
  </div>
</div>
`;

exports[`EuiPageHeaderContent props children is rendered even if content props are passed 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent-border"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
      <div
        class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      Child
    </div>
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
  <div
    class="euiPageHeaderContent__bottom"
  >
    <div
      class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
    />
    <div
      class="euiTabs emotion-euiTabs-m"
      role="tablist"
    >
      <button
        aria-selected="true"
        class="euiTab euiTab-isSelected emotion-euiTab-selected"
        role="tab"
        tabindex="0"
        type="button"
      >
        <span
          class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
        >
          Tab 1
        </span>
      </button>
      <button
        aria-selected="false"
        class="euiTab emotion-euiTab"
        role="tab"
        tabindex="-1"
        type="button"
      >
        <span
          class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
        >
          Tab 2
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props description is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <div
        class="euiText emotion-euiText-constrainedWidth-m"
      >
        <p>
          Description
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with icon 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        <span
          class="emotion-euiPageHeaderContent__titleIcon"
          data-euiicon-type="logoKibana"
        />
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with icon and iconProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="euiTitle emotion-euiTitle-l"
      >
        <span
          class="testClass1 testClass2 emotion-euiPageHeaderContent__titleIcon-euiTestCss"
          data-euiicon-type="logoKibana"
          data-test-subj="test subject string"
        >
          aria-label
        </span>
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props pageTitle is rendered with pageTitleProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        aria-label="aria-label"
        class="euiTitle testClass1 testClass2 emotion-euiTitle-l-euiTestCss"
        data-test-subj="test subject string"
      >
        Page title
      </h1>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props responsive is rendered as false 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props responsive is rendered as reverse 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
  </div>
</div>
`;

exports[`EuiPageHeaderContent props rightSideItems is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
    <div
      class="euiFlexGroup emotion-euiFlexGroup-wrap-m-flexStart-stretch-row-euiPageHeaderContent__rightSideItems"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props rightSideItems is rendered with rightSideGroupProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    />
    <div
      aria-label="aria-label"
      class="euiFlexGroup testClass1 testClass2 emotion-euiFlexGroup-wrap-m-flexStart-stretch-column-euiPageHeaderContent__rightSideItems-euiTestCss"
      data-test-subj="test subject string"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 2
        </button>
      </div>
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero-euiPageHeaderContent__rightSideItem"
      >
        <button>
          Button 1
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props tabs is rendered 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="emotion-euiScreenReaderOnly"
      >
        Tab 1
      </h1>
      <div
        class="euiTabs emotion-euiTabs-m"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="euiTab euiTab-isSelected emotion-euiTab-selected"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="euiTab emotion-euiTab"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPageHeaderContent props tabs is rendered with tabsProps 1`] = `
<div
  class="euiPageHeaderContent emotion-euiPageHeaderContent"
>
  <div
    class="euiFlexGroup euiPageHeaderContent__top emotion-euiFlexGroup-responsive-wrap-l-flexStart-stretch-row-euiPageHeaderContent__top"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-2-euiPageHeaderContent__leftSideItems"
    >
      <h1
        class="emotion-euiScreenReaderOnly"
      >
        Tab 1
      </h1>
      <div
        aria-label="aria-label"
        class="euiTabs testClass1 testClass2 emotion-euiTabs-m-euiTestCss"
        data-test-subj="test subject string"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="euiTab euiTab-isSelected emotion-euiTab-selected"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 1
          </span>
        </button>
        <button
          aria-selected="false"
          class="euiTab emotion-euiTab"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            class="euiTab__content eui-textTruncate emotion-euiTab__content-m"
          >
            Tab 2
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
